--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,4 @@
-# etoumarcellino
-hébergement gratuit
+
 <html lang="en" dir="ltr">
   <head>
   <title>ME CONTACTER</title>
@@ -16,7 +15,7 @@ hébergement gratuit
       </label>
       <label class="logo">Etou</label>
       <ul>
-        <li><a  href="etou.html">HOME</a></li>
+        <li><a  href="Index.html">HOME</a></li>
         <li><a href="CV.html">CV</a></li>
 		<li><a href="SITE.html">SITE</a></li>
         <li><a class="active" href="Contact.html">Contact</a></li>
